# esp-rs-openthread

examples/workspace/: Cargo.toml
examples/workspace/ftd/: Cargo.toml  build.rs
examples/workspace/non-default-mtd/: Cargo.toml
openthread/: Cargo.toml
openthread-sys/: CMakeLists.txt  Cargo.toml  build.rs
openthread/src/: dns_client.rs  lib.rs  srp.rs  udp.rs
