[package]
name = "openthread"
version = "0.1.0"
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["thread", "openthread", "embedded", "embassy"]
description = "Raw bindings for OpenThread"
repository = "https://github.com/ivmarkov/esp-openthread"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.84"

[lib]
harness = false

[features]
default = []
force-generate-bindings = ["openthread-sys/force-generate-bindings"]
force-esp-riscv-toolchain = ["openthread-sys/force-esp-riscv-toolchain"]

edge-nal = ["udp", "dep:edge-nal"]
full-thread-device = ["openthread-sys/full-thread-device"]
udp = []
dnssd-server = ["openthread-sys/dnssd-server"]
dns-client = ["openthread-sys/dns-client", "alloc"]
srp = ["srp-client"]
srp-client = ["udp"]
srp-server = ["openthread-sys/srp-server", "srp-client"]

defmt = ["dep:defmt", "heapless/defmt-03", "embassy-time/defmt"]
isupper = [] # Provide internal implementation of the `isupper` C fn
alloc = []

non-volatile-storage = ["openthread-sys/non-volatile-storage", "dep:esp-storage"] # ["dep:esp-nvs", "dep:esp-storage"]

[dependencies]
openthread-sys = { path = "../openthread-sys" }
log = { version = "0.4", default-features = false, optional = true }
defmt = { version = "1.0", default-features = false, optional = true, features = ["ip_in_core"] }
scopeguard = { version = "1", default-features = false }
rand_core = "0.9"
embassy-sync = "0.7"
embassy-time = "0.5"
embassy-futures = "0.1"
heapless = { version = "0.8", features = ["portable-atomic"] }
bitflags = "2.5"
embassy-net-driver-channel = { version = "0.3", optional = true }
edge-nal = { version = "0.5", optional = true }
esp-radio = { version = "0.17", features = ["unstable", "ieee802154"], optional = true }
embassy-nrf = { version = "0.8", optional = true }
portable-atomic = "1"
esp-nvs = { version = "0.1.3", git="https://github.com/lhemala/esp-nvs", optional = true }
esp-storage = { version = "0.8.1", features = ["defmt", "esp-hal"], optional = true }
